# project_OZdiary

./: .env  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
app/: main.py
app/api/v1/: auth.py  diary.py  question.py  quote.py
app/core/: config.py  jwt.py  security.py
app/db/: base.py  database.py
app/models/: base_model.py  bookmark.py  diary.py  question.py  quote.py  user.py  user_question.py
app/repositories/: user_repo.py
app/schemas/: diary.py  question.py  quote.py  user.py
app/scraping/: quote_scraper.py
app/services/: auth_service.py  diary_service.py  question_service.py  quote_service.py
static/: index.html
tests/: conftest.py  test_auth.py  test_auth_required.py  test_bookmark.py  test_diary.py  test_question.py  test_quote.py
