[project]
name = "project-ozdiary"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aerich==0.7.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "pre-commit>=4.5.1",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
    "tortoise-orm==0.23.0",
    "uvicorn>=0.30.0",
]

[tool.aerich]
tortoise_orm = "app.db.database.TORTOISE_CONFIG"
location = "./migrations"
src_folder = "./."
